Fix image imports and add favicon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="author" content="RAKOTOMALALA Irintsoa" />
     <meta name="keywords" content="développeur full stack, react, node.js, designer, UI/UX, portfolio, web developer, Madagascar" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/jpeg" href="/irina.jpg" />
+    <link rel="apple-touch-icon" href="/irina.jpg" />
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="RAKOTOMALALA Irintsoa | Développeur Full Stack & Designer" />
